--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "eslint": "^8.52.0",
     "prettier": "^3.1.0",
     "prettier-eslint": "^16.1.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
