--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier-eslint": "^16.1.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.3"
   }
 }
